# open-discussions

./: .coveragerc  .env.example  .eslintrc  .eslintrc.js  .flowconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .sass-lint.yml  .secrets.baseline  .stylelintrc.yaml  .travis.yml  .yarnrc.yml  Aptfile  CODEOWNERS  Dockerfile  Dockerfile-nb  Dockerfile-node  PHASE2_COMPLETION.md  PHASE2_VERIFICATION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE4_VERIFICATION.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_2_SUMMARY.md  Procfile  README.md  README_PHASE_2.md  RELEASE.rst  app.json  apt.txt  conftest.py  docker-compose-notebook.yml  docker-compose.override.yml  docker-compose.travis.yml  docker-compose.yml  drf_lint_baseline.json  hot-reload-dev-server.js  jest-shared-setup.ts  (+23 more)
authentication/: admin.py  api.py  api_test.py  apps.py  constants.py  decorators.py  email_validation_api.py  email_validation_api_test.py  exceptions.py  forms.py  forms_test.py  middleware.py  middleware_test.py  models.py  models_test.py  serializers.py  serializers_test.py  strategy.py  strategy_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
cassettes/: authentication.pipeline.user_test.test_initialize_user.json  authentication.pipeline.user_test.test_initialize_user[True].json  authentication.views_test.test_login_register_flows[login_email_exists--login_password_user_inactive].json  authentication.views_test.test_login_register_flows[login_email_exists->login_password_invalid].json  authentication.views_test.test_login_register_flows[login_email_exists->login_password_valid].json  authentication.views_test.test_login_register_flows[login_email_mm_only].json  authentication.views_test.test_login_register_flows[login_email_not_exists--register_continue_from_login->redeem_confirmation_code--register_profile_details].json  authentication.views_test.test_login_register_flows[login_email_saml_exists].json  authentication.views_test.test_login_register_flows[register_email_exists--login_password_valid].json  authentication.views_test.test_login_register_flows[register_email_exists->login_password_invalid].json  authentication.views_test.test_login_register_flows[register_email_not_exists->redeem_confirmation_code->redeem_confirmation_code_twice].json  authentication.views_test.test_login_register_flows[register_email_not_exists->redeem_confirmation_code->register_profile_details].json  authentication.views_test.test_login_register_flows[register_mm_exists].json  authentication.views_test.test_register_email[False-register-confirm-sent].json  channels.views.channels_test.test_create_channel.json  channels.views.channels_test.test_create_channel[False].json  channels.views.channels_test.test_create_channel[None].json  channels.views.channels_test.test_create_channel[True].json  channels.views.channels_test.test_create_channel_already_exists.json  channels.views.channels_test.test_create_channel_no_descriptions.json  channels.views.channels_test.test_create_channel_noauth.json  channels.views.channels_test.test_create_channel_nonstaff.json  channels.views.channels_test.test_get_channel.json  channels.views.channels_test.test_get_channel_anonymous[False].json  channels.views.channels_test.test_get_channel_anonymous[True].json  channels.views.channels_test.test_get_channel_not_found.json  channels.views.channels_test.test_get_channel_with_avatar_banner.json  channels.views.channels_test.test_get_short_channel.json  channels.views.channels_test.test_list_channels.json  channels.views.channels_test.test_list_channels_anonymous[True].json  channels.views.channels_test.test_list_channels_ordered.json  channels.views.channels_test.test_patch_channel.json  channels.views.channels_test.test_patch_channel_about.json  channels.views.channels_test.test_patch_channel_image[avatar].json  channels.views.channels_test.test_patch_channel_image[banner].json  channels.views.channels_test.test_patch_channel_moderator.json  channels.views.channels_test.test_patch_channel_not_found.json  channels.views.channels_test.test_patch_channel_validate_image[avatar].json  channels.views.channels_test.test_patch_channel_validate_image[banner].json  channels.views.channels_test.test_patch_title_non_superuser_forbidden.json  (+267 more)
channels/: __init__.py  admin.py  api.py  api_test.py  apps.py  backpopulate_api.py  backpopulate_api_test.py  conftest.py  constants.py  exceptions.py  factories.py  membership_api.py  membership_api_test.py  models.py  models_test.py  moira.py  moira_test.py  proxies.py  serializers.py  serializers_test.py  signals.py  spam.py  spam_test.py  task_helpers.py  task_helpers_test.py  tasks.py  tasks_test.py  test_constants.py  test_utils.py  urls.py  urls_test.py  utils.py  utils_test.py  views.py  views_test.py
channels_fields/: __init__.py  admin.py  api.py  api_test.py  apps.py  conftest.py  constants.py  factories.py  models.py  permissions.py  permissions_test.py  serializers.py  serializers_test.py  signals.py  urls.py  utils.py  views.py  views_test.py
ckeditor/: admin.py  apps.py  models.py  urls.py  views.py  views_test.py
config/: nginx.conf  nginx.conf.erb
course_catalog/: admin.py  api.py  api_test.py  conftest.py  constants.py  exceptions.py  factories.py  filters.py  filters_test.py  models.py  models_test.py  permissions.py  permissions_test.py  serializer_helpers.py  serializer_helpers_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  task_helpers.py  task_helpers_test.py  tasks.py  tasks_helpers.py  tasks_helpers_test.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py  views_stafflist_test.py  views_test.py  views_userlist_test.py
discussions/: __init__.py  admin.py  apps.py  constants.py  factories.py  models.py  models_test.py  permissions.py  permissions_test.py  serializers.py  serializers_test.py  sorting.py  urls.py  views.py  views_test.py
docs/: Gemfile  _config.yml  configuration.md  index.md  integration.md  learning_resources.md  operations.md
embedly/: admin.py  api.py  api_test.py  (+5 more)
(+3315 files in other folders)
