[project]
name = "open-discussions"
version = "0.71.0"
description = "Search index and discussion forum for use with other MIT applications."
authors = [{ name = "MIT ODL" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "BSD-3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "attrs>=23.1.0,<24",
    "beautifulsoup4>=4.8.2,<5",
    "boto3>=1.26.155,<2",
    "cairosvg>=2.7.0,<3",
    "celery>=5.3.1,<6",
    "cffi>=1.15.1,<2",
    "cryptography>=39.0.1,<40",
    "dj-database-url>=0.5.0,<0.6",
    "dj-static>=0.0.6,<0.0.7",
    "Django==4.2.25",
    "django-anymail[mailgun]>=10.0,<11",
    "django-bitfield>=2.2.0,<3",
    "django-cache-memoize>=0.2.0,<0.3",
    "django-cors-headers>=3.6.0,<4",
    "django-filter>=2.4.0,<3",
    "django-guardian>=2.4.0,<3",
    "django-hijack>=3.4.1,<4",
    "django-imagekit>=4.1.0,<5",
    "django-ipware>=3.0.7,<4",
    "django-json-widget>=1.0.0,<2",
    "django-redis>=5.2.0,<6",
    "django-server-status>=0.7.0,<0.8",
    "django-storages>=1.13.2,<2",
    "django-webpack-loader>=1.4.1,<2",
    "djangorestframework>=3.14.0,<4",
    "djoser>=2.2.0,<3",
    "drf-extensions>=0.7.1,<0.8",
    "drf-jwt>=1.19.2,<2",
    "drf-spectacular>=0.27.0,<0.28",
    "feedparser>=6.0.10,<7",
    "mit-moira",
    "google-api-python-client>=2.89.0,<3",
    "html5lib>=1.1,<2",
    "importlib_metadata>=6.6.0,<7",
    "ipython>=8.14.0,<9",
    "jedi>=0.19.0,<0.20",
    "lxml>=4.9.2,<5",
    "markdown2>=2.4.8,<3",
    "nested-lookup>=0.2.25,<0.3",
    "newrelic>=8.8.0,<9",
    "ocw-data-parser>=0.35.1,<0.36",
    "opensearch-dsl>=1.0.0,<2",
    "opensearch-py>=1.0.0,<2",
    "psycopg2>=2.9.6,<3",
    "pygithub>=1.44.1,<2",
    "python-dateutil>=2.8.2,<3",
    "python-rapidjson>=1.8,<2",
    "python3-saml>=1.15.0,<2",
    "pytube>=9.5.2,<10",
    "pyyaml>=6.0.0,<7",
    "redis>=4.5.5,<5",
    "requests>=2.31.0,<3",
    "sentry-sdk>=2.0.0,<3",
    "social-auth-app-django>=5.2.0,<6",
    "static3>=0.5.1,<0.6",
    "tika>=1.23.1,<2",
    "tldextract>=2.2.0,<3",
    "toolz>=0.10.0,<0.11",
    "ulid-py>=0.0.3,<0.0.4",
    "urllib3>=1.25.10,<2",
    "uwsgi>=2.0.21,<3",
    "wrapt>=1.14.1,<2",
    "xbundle>=0.3.1,<0.4",
    "social-auth-core[openidconnect]>=4.4.2,<5",
    "tabulate>=0.9.0,<0.10",
]

[tool.black]
py311 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[dependency-groups]
dev = [
    "astroid>=2.15.4,<3",
    "betamax>=0.8.0,<0.9",
    "betamax_serializers>=0.2.1,<0.3",
    "black==22.6.0",
    "bpython>=0.24,<0.25",
    "ddt>=1.6.0,<2",
    "django-debug-toolbar>=4.1.0,<5",
    "factory_boy>=2.12.0,<3",
    "faker>=2.0.0,<3",
    "ipdb>=0.13.13,<0.14",
    "isort>=4.3.21,<5",
    "moto>=4.1.12,<5",
    "nplusone>=0.9.0,<0.10",
    "pdbpp>=0.10.3,<0.11",
    "pip-tools>=6.13.0,<7",
    "pylint>=2.17.4,<3",
    "pylint-django>=2.5.3,<3",
    "pytest>=7.3.1,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-django>=4.5.2,<5",
    "pytest-env>=0.8.1,<0.9",
    "pytest-freezegun>=0.4.2,<0.5",
    "pytest-lazy-fixture>=0.6.3,<0.7",
    "pytest-mock>=3.10.0,<4",
    "responses>=0.25.0,<0.26",
    "safety>=2.3.4,<3",
    "semantic-version>=2.10.0,<3",
]

# settings to make isort compatible with how black formats imports
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.uv]
default-groups = "all"

[tool.uv.sources]
mit-moira = { git = "https://github.com/mitodl/mit-moira", tag = "v0.0.4" }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
